Update to Neo4j 2.1.8